# safety-stable-baselines

./: .gitignore  .gitmodules  BEST_PRACTICES.md  LICENSE  README.md  RELEASE_NOTES.md  eval.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: API.md  best-practices.md  eval.md  hyperparameters.md  index.md  reference.md  requirements.txt
examples/: bicycle5d_demo.py  bicycle5d_value_compare.py  car_circle_naive_train.py  car_circle_naive_train_PPO.py  car_circle_naive_train_withFilter.py  car_circle_naive_train_withFilter_PPO.py  car_circle_naive_train_withRolloutFilter.py  car_circle_naive_train_withRolloutFilter_PPO.py  car_circle_safety_train.py  car_circle_train.py  car_goal_naive_train.py  car_goal_naive_train_PPO.py  car_goal_naive_train_withFilter.py  car_goal_naive_train_withFilter_PPO.py  car_goal_naive_train_withRolloutFilter.py  car_goal_safety_train.py  generate_initial_states.py  manual_control_debug.py  pendulum_reach_avoid_ppo_train.py  pendulum_test.ipynb  pendulum_train.py  replay_trained_model.py  replay_trained_model_car_circle.py  replay_trained_model_car_goal.py  replay_trained_ppo_model_car_circle.py  replay_trained_ppo_model_car_goal.py  replay_trained_sac_model.py  replay_trained_sac_model_car_circle.py  replay_trained_sac_model_car_goal.py
initial_states/: SafetyCarCircle2-v0_n10_20251104_110032.pkl
patches/: safety-gymnasium.patch
safety_sb3/: __init__.py  backups.py  callbacks.py  eval_callbacks.py  gamma_anneal.py  isaacs.py  isaacs_buffers.py  isaacs_policy.py  isaacs_ppo.py  leaderboard.py  reach_avoid_ppo.py  reach_avoid_sac.py  safety_a2c.py  safety_buffers.py  safety_dqn.py  safety_ppo.py  safety_sac.py  tensor_buffers.py  tensor_env.py  tensor_replay.py
slurm/: circle_naive_rollout.slurm  circle_naive_sac.slurm  circle_naive_value.slurm  goal_naive_rollout.slurm  goal_naive_sac.slurm  goal_naive_value.slurm
tests/: test_backups.py  test_gamma_anneal.py  test_isaacs_lr.py  test_ppo_smoke.py  test_taxonomy.py  test_tensor_sac.py
vault/: .gitignore  CLAUDE.md  README.md  __init__.py  config.py  distill.py  dynamics.py  env.py  evaluate.py  f_cert.py  filter.py  grid.py  mujoco_model.py  mujoco_plant.py  requirements.txt  train.py
wrappers/: __init__.py  observation_storing_wrapper.py  safety_rollout_filter_wrapper.py  safety_value_filter_wrapper.py  (+1 more)
(+28 files in other folders)
