[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety_sb3"
version = "0.1.0"
description = "Safety RL add-on for Stable-Baselines3"
readme = "README.md"
# Core package runs on any modern python (validated on 3.10 and 3.11).
# The optional safety-gymnasium examples submodule still needs 3.10 exactly;
# see README installation notes.
requires-python = ">=3.10"

license = { file = "LICENSE" }

dependencies = [
  "stable-baselines3>=2.0.0",
  "torch>=1.13",
  "gymnasium>=0.28",
  "numpy>=1.23",
  "tensorboard",
  "wandb"
]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/SafeRoboticsLab/safety-stable-baselines"
Repository = "https://github.com/SafeRoboticsLab/safety-stable-baselines"
Issues = "https://github.com/SafeRoboticsLab/safety-stable-baselines/issues"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["safety_sb3*"]
